Fixed compact post list spacing

--- a/src/scss/utilities/_lists.scss
+++ b/src/scss/utilities/_lists.scss
@@ -28,6 +28,8 @@
   &--compact li {
     margin-left: 0;
     padding-left: var(--space-100);
+    padding-top: var(--space-200);
+    padding-bottom: var(--space-200);
   }
 }
 
